Z-index hover fix

--- a/_scss/modules/portfolio.scss
+++ b/_scss/modules/portfolio.scss
@@ -59,5 +59,6 @@
     position: absolute;
     left: 1em;
     bottom: 1em; 
+    z-index: 10;
   }
 }
